Fix white space at bottom of website

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,8 +203,6 @@ hr {
     float: right;
     line-height: 25px;
     clear: both;
-    margin-top: 100px;
-    margin-left: 20px;
 }
 
 .right-about-content {
@@ -212,8 +210,6 @@ hr {
     float: left;
     line-height: 25px;
     clear: both;
-    margin-top: 100px;
-    margin-left: 20px;
 }
 
 .orange-color:hover {
@@ -223,14 +219,14 @@ hr {
 .medium-image {
     height: 100%;
     width: 100%;
-    margin-top: 50px;
     border-radius: 5%;
 }
 
 #perfect-list > li {
     list-style-type: none;
-    margin-top: 30px;
     margin-right: 5px;
+    position: relative;
+    top: 30px;
 }
 
 .vertical-image {
@@ -300,4 +296,14 @@ hr {
     height: 30px;
     background-color: #F79F24;
     position: relative;
+}
+
+/* footer */
+
+footer {
+    height: 250px;
+    width: 100%;
+    background-color: #F79F24;
+    position: fixed;
+    top: 800px;
 }
